--- a/blogs/blog-1/post.html
+++ b/blogs/blog-1/post.html
@@ -16,7 +16,7 @@
     <div class="content">
       <div class="detail">
         <div class="detail_title">Sample blog post</div>
-        <div class="detail_date">January 1, 2024 by Mark</div>
+        <div class="detail_date">January 1, 2024 by <div class="item" style="display: inline;">Mark</div></div>
         <div class="detail_1">
           This blog post shows a few different types of content that's supported
           and styled with Bootstrap. Basic typography, images, and code are all
@@ -24,7 +24,7 @@
         </div>
         <hr />
         <div class="detail_2">
-          Cum soclis natoque penatibus et magnis dis parturient montes, nascetur
+          Cum soclis natoque penatibus et magnis <div class="item" style="display: inline;">dis parturient montes,</div> nascetur
           ridiculus mus. Aenean eu leo quam. Pellentesque ornare sem lacinia
           quam venenatis vestibulum. Sed poscuere consectetur est at lobortis.
           Cras mattis consectetur purus sit amet fementum.
