--- a/blogs/blog-1/index.html
+++ b/blogs/blog-1/index.html
@@ -20,7 +20,7 @@
           <div class="box_title">Example Blog Post</div>
           <div class="box_date">Nov 12</div>
           <div class="box_desc">This card represents an example blog post.</div>
-          <div class="box_link">Continue reading</div>
+          <div class="box_link"><a href="./post.html">Continue reading</a></div>
         </div>
       </div>
       <div class="box">
@@ -32,7 +32,7 @@
             This is a wider card with supporting text below as a natural lead-in
             to additional content.
           </div>
-          <div class="box_link">Continue reading</div>
+          <div class="box_link"><a href="./post.html">Continue reading</a></div>
         </div>
       </div>
       <div class="box">
@@ -41,7 +41,7 @@
           <div class="box_title">Example Blog Post</div>
           <div class="box_date">Nov 12</div>
           <div class="box_desc">This card represents an example blog post.</div>
-          <div class="box_link">Continue reading</div>
+          <div class="box_link"><a href="./post.html">Continue reading</a></div>
         </div>
       </div>
       <div class="box">
@@ -53,7 +53,7 @@
             This is a wider card with supporting text below as a natural lead-in
             to additional content.
           </div>
-          <div class="box_link">Continue reading</div>
+          <div class="box_link"><a href="./post.html">Continue reading</a></div>
         </div>
       </div>
       <div class="box">
@@ -62,7 +62,7 @@
           <div class="box_title">Example Blog Post</div>
           <div class="box_date">Nov 12</div>
           <div class="box_desc">This card represents an example blog post.</div>
-          <div class="box_link">Continue reading</div>
+          <div class="box_link"><a href="./post.html">Continue reading</a></div>
         </div>
       </div>
       <div class="box">
@@ -74,7 +74,7 @@
             This is a wider card with supporting text below as a natural lead-in
             to additional content.
           </div>
-          <div class="box_link">Continue reading</div>
+          <div class="box_link"><a href="./post.html">Continue reading</a></div>
         </div>
       </div>
     </div>
