--- a/blogs/blog-2/index.html
+++ b/blogs/blog-2/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="card_group">
           <div class="card">
-            <div class="card_title">Blog Post 1</div>
+            <div class="card_title"><a href="./post.html">Blog Post 1</a></div>
             <div class="card_content">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque,
               architecto, eaque ea impedit saepe veniam odio omnis aliquid porro
@@ -29,7 +29,7 @@
             </div>
           </div>
           <div class="card">
-            <div class="card_title">Blog Post 2</div>
+            <div class="card_title"><a href="./post.html">Blog Post 2</a></div>
             <div class="card_content">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque,
               architecto, eaque ea impedit saepe veniam odio omnis aliquid porro
@@ -38,7 +38,7 @@
             </div>
           </div>
           <div class="card">
-            <div class="card_title">Blog Post 3</div>
+            <div class="card_title"><a href="./post.html">Blog Post 3</a></div>
             <div class="card_content">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque,
               architecto, eaque ea impedit saepe veniam odio omnis aliquid porro
