update required changes

--- a/blogs/blog-2/static/html/post.html
+++ b/blogs/blog-2/static/html/post.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="post.css" />
+    <link rel="stylesheet" type="text/css" href="../css/post.css" />
   </head>
   <body>
     <div class="header">Back to blog</div>
@@ -28,11 +28,15 @@
         <div class="power">Powered by HTML.COM</div>
       </div>
       <div class="detail_3">
-        Fabio vel ludice vincam, sunt in culpa qui offical <code>ipeum()</code>,
-        ab illo tempore, ab est sed immemorabili. Quisque placerat facillisis
-        egestas cllium dolore. Qui ipsorum illgnua Celtaem nostra Galli
-        appellanur.
+        <strong>Fabio vel ludice vincam,</strong> sunt in culpa qui offical
+        <code>ipeum()</code>, ab illo tempore, ab est sed immemorabili. Quisque
+        placerat facillisis egestas cllium dolore. Qui ipsorum illgnua Celtaem
+        nostra Galli appellanur.
       </div>
+      <figure>
+        <img src="../imgs/1.jpg" alt="Trulli" style="width: 100%" />
+        <figcaption>Fig.1 - Trulli, Puglia, Italy.</figcaption>
+      </figure>
       <div class="detail_4">
         Quid securi etiam tamquam eu fugiat nulla pariatur.
       </div>
@@ -57,6 +61,9 @@
       <div class="detail_6">
         Etiam habebis sem dicantur magna mollis euismod.
       </div>
+      <h1>Hello Test</h1>
+      <p>Etiam habebies</p>
+      <q>testtest</q>
       <ol>
         <li>Ullamco laboris nisi ut allquld ex ea commodi consequat.</li>
         <li>Duis aute irure dolor in reprehenderit in voluptate velit.</li>
