--- a/blogs/blog-2/index.html
+++ b/blogs/blog-2/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="index.css" />
+    <link rel="stylesheet" type="text/css" href="./static/css/index.css" />
   </head>
   <body>
     <div class="header">Blog</div>
@@ -20,7 +20,9 @@
         </div>
         <div class="card_group">
           <div class="card">
-            <div class="card_title"><a href="./post.html">Blog Post 1</a></div>
+            <div class="card_title">
+              <a href="./static/html/post.html">Blog Post 1</a>
+            </div>
             <div class="card_content">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque,
               architecto, eaque ea impedit saepe veniam odio omnis aliquid porro
@@ -29,7 +31,9 @@
             </div>
           </div>
           <div class="card">
-            <div class="card_title"><a href="./post.html">Blog Post 2</a></div>
+            <div class="card_title">
+              <a href="./static/html/post.html">Blog Post 2</a>
+            </div>
             <div class="card_content">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque,
               architecto, eaque ea impedit saepe veniam odio omnis aliquid porro
@@ -38,7 +42,9 @@
             </div>
           </div>
           <div class="card">
-            <div class="card_title"><a href="./post.html">Blog Post 3</a></div>
+            <div class="card_title">
+              <a href="./static/html/post.html">Blog Post 3</a>
+            </div>
             <div class="card_content">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque,
               architecto, eaque ea impedit saepe veniam odio omnis aliquid porro
